# rust-beginner-projects

./: README.md
todo_cli/: Cargo.toml  README.md
todo_cli/src/: main.rs
url_shortener/: Cargo.toml  README.md
url_shortener/src/: main.rs  url_shortener.rs
